--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 #web server
 server.port=8080
-server.contextPath=/api
+server.contextPath=/RestAPIPesquisa
 
 #Application specific
 authentication.oauth.clientid=teste
