--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 spring.datasource.url=jdbc:h2:mem:spring_boot_oauth2
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.dataSourceClassName=org.h2.jdbcx.JdbcDataSource
-spring.datasource.schema=classpath:/sql/schema.sql
 spring.datasource.data=classpath:/sql/data.sql
+spring.datasource.dataSourceClassName=org.h2.jdbcx.JdbcDataSource
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # JPA properties
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=H2
 spring.jpa.openInView=false
 spring.jpa.show_sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
 
 #web server
 server.port=8080
